created a bunch of files... had some issues deleted and recloned.. still having issues.